# autojsons

./: README.md
autojsons/: __init__.py  core.py  exceptions.py  pyproject.toml  workspace.yaml
