[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autojsons"
version = "0.1.0"
description = "A Python module for easy JSON file handling"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/yourusername/autojsons"
"Bug Tracker" = "https://github.com/yourusername/autojsons/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.5b2",
    "isort>=5.8.0",
    "mypy>=0.812",
    "flake8>=3.9.0",
]

[tool.setuptools]
package-dir = { "" = "autojsons" }
